--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Transition.js</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <style>
       * { margin: 0; padding: 0; }
       body {
