--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
           var transition = new Transition(elem);
           transitions.push(transition);
-          document.body.appendChild(elem);
+          document.querySelector('#content').appendChild(elem);
 
         }
 
