--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="info" style="position: relative; z-index: 9999; top: 50%; margin-top: -50px;">
       <p><strong>Transition.js</strong></p>
       <p>Click anywhere to transition elements in/out.</p>
-      <p><a href="http://jonobr1.github.com/transition.js/build/transition.min.js">Download</a> &middot; <a href="http://github.com/jonobr1/transition.js" target="_blank">Source</a></p>
+      <p><a href="http://jonobr1.github.com/transition.js/build/transition.min.js" target="_blank">Download</a> &middot; <a href="http://github.com/jonobr1/transition.js" target="_blank">Source</a></p>
     </div>
     <div class="scripts">
       <script src="./build/transition.js"></script>
