increase hit area

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         cursor: pointer;
       }
       #info {
-        padding: 20px;
+        position:absolute;
+        padding: 20px 0;
+        z-index: 9999;
+        top: 50%;
+        left: 50%;
+        margin-top: -50px;
+        margin-left: -150px;
+        width: 300px;
       }
       a { color: #333; }
       a:hover { text-decoration: none; }
