font size controversy

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         left: 0;
         right: 0;
         text-align: center;
-        font-size: 13px;
       }
     </style>
   </head>
@@ -48,7 +47,7 @@
       <p><strong>Transition.js</strong></p>
       <p>Click anywhere to transition elements in/out.</p>
       <p><a href="http://jonobr1.github.com/transition.js/build/transition.min.js" target="_blank">Download</a> &middot; <a href="http://github.com/jonobr1/transition.js" target="_blank">Source</a></p>
-      <p id="vrse">With thanks to <a href="http://vrse.com" target="_blank">Vrse</a>.</p>
+      <span id="vrse">With thanks to <a href="http://vrse.com" target="_blank">Vrse</a>.</span>
     </div>
     <div class="scripts">
       <script src="./build/transition.js"></script>
