trying other things, mobile safari sucks

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       * { margin: 0; padding: 0; }
       body {
         font-family: Lucida Grande, helvetica, arial, sans-serif;
-        font-size: 13px;
-        line-height: 20px;
+        font-size: 13px !important;
+        line-height: 20px !important;
         text-align: center;
         color: #333;
       }
@@ -47,8 +47,8 @@
       <p><strong>Transition.js</strong></p>
       <p>Click anywhere to transition elements in/out.</p>
       <p><a href="http://jonobr1.github.com/transition.js/build/transition.min.js" target="_blank">Download</a> &middot; <a href="http://github.com/jonobr1/transition.js" target="_blank">Source</a></p>
-      <span id="vrse">With thanks to <a href="http://vrse.com" target="_blank">Vrse</a>.</span>
     </div>
+    <p id="vrse">With thanks to <a href="http://vrse.com" target="_blank">Vrse</a>.</p>
     <div class="scripts">
       <script src="./build/transition.js"></script>
       <script>
