--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <p><strong>Transition.js</strong></p>
       <p>Click anywhere to transition elements in/out.</p>
       <p><a href="http://jonobr1.github.com/transition.js/build/transition.min.js" target="_blank">Download</a> &middot; <a href="http://github.com/jonobr1/transition.js" target="_blank">Source</a></p>
+      <p id="vrse"><a href="http://vrse.com" target="_blank">With thanks to Vrse.</a></p>
     </div>
-    <p id="vrse">With thanks to <a href="http://vrse.com" target="_blank">Vrse</a>.</p>
     <div class="scripts">
       <script src="./build/transition.js"></script>
       <script>
